--- a/login/css/style.css
+++ b/login/css/style.css
@@ -124,6 +124,7 @@ button:hover {
         padding: 1.5rem !important
     }
     .m-5{margin-left: 0 !important; margin-right: 0 !important;}
+    .pt-5{padding-top: 20px !important;}
 }
 
 @media screen and (min-device-width: 767px) and (max-device-width: 991px) {
